# alkali

./: CHANGELOG.md  Cargo.toml  LICENSE-MIT  README.md  TODO.md
.github/workflows/: tests.yml
examples/: file-encryption.rs
src/: encode.rs  lib.rs  mem.rs  random.rs  util.rs
src/asymmetric/: cipher.rs  kx.rs  mod.rs  repudiable_cipher.rs  seal.rs  sign.rs
src/curve/: curve25519.rs  ed25519.rs  mod.rs  ristretto255.rs
src/hash/: generic.rs  kdf.rs  mod.rs  pwhash.rs  sha2.rs  short.rs
src/hash/pbkdf/: argon2i.rs  argon2id.rs  mod.rs  scrypt.rs
src/hash/pwhash/: argon2i.rs  argon2id.rs  mod.rs  scrypt.rs
src/symmetric/: auth.rs  cipher.rs  cipher_stream.rs  mod.rs  one_time_auth.rs  stream.rs
src/symmetric/aead/: aes256gcm.rs  chacha20poly1305.rs  chacha20poly1305_ietf.rs  mod.rs  xchacha20poly1305_ietf.rs
