[package]
name = "alkali"
version = "0.2.0"
authors = ["tom25519 <tom25519@pm.me>"]
edition = "2021"
description = "Safe Rust bindings to the Sodium cryptographic library"
repository = "https://github.com/tom25519/alkali"
license = "MIT OR Apache-2.0"
keywords = ["cryptography", "libsodium", "nacl", "sodium"]
categories = ["api-bindings", "cryptography"]

[package.metadata.docs.rs]
features = ["aes", "alloc", "hazmat"]
rustdoc-args = ["--cfg", "doc_cfg"]

[dependencies]
lazy_static = "1.4"
libc = { version = "0.2", default-features = false }
libsodium-sys-stable = "1.19"
rand_core = { version = "0.6" }
serde = { version = "1.0", default-features = false, features = ["derive"], optional = true }
serde-big-array = { version = "0.4", optional = true }

[dev-dependencies]
rand = "0.8"
rpassword = "5.0"

[features]
aead-chacha20 = []
aes = []
alloc = []
curve = []
default = ["use-serde", "std"]
fetch-latest = ["libsodium-sys-stable/fetch-latest"]
hazmat = ["aead-chacha20", "curve", "onetimeauth", "sha2", "stream"]
minimal = ["libsodium-sys-stable/minimal"]
onetimeauth = []
optimized = ["libsodium-sys-stable/optimized"]
use-serde = ["serde", "serde-big-array"]
sha2 = []
std = ["rand_core/std"]
stream = []
use-pkg-config = ["libsodium-sys-stable/use-pkg-config"]
